fix: login items in navbar on mobile not aligned on flex-start

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -629,6 +629,12 @@ tr td:first-child {
         left: auto;
     }
 
+    .navbar-collapse .login {
+        align-items: flex-start !important;
+        border-top: 1px solid var(--blue-color);
+        padding-top: .2rem;
+    }
+
     .navbar-toggler {
         margin: 5px 0 5px 0;
     }
